--- a/src/njk/index.html
+++ b/src/njk/index.html
@@ -1,32 +1,30 @@
 {% extends '_layouts/base.njk' %}
 
-{% block page_title %}New index page title{% endblock %}
+{% block page_title %}About{% endblock %}
 
 {% block content %}
 
 <div class="container">
+
   <div class="row">
     <div class="col">
-    <h1>Main headline</h1>
-    <p class="author">By {% for author in authors %}
-      <a href="{{ author.link }}" target="_blank">{{ author.name }}</a>{% if not loop.last %}{% if loop.revindex0 == 1 %} and {% else %}, {% endif %}{% endif %} {% endfor %}
-      <br> Published {{ publish_date }}
-    </p>
+    <h1>Band biography</h1>
     </div>
   </div>
   <div class="row">
     <div class="col">
     <p>
-      Lucas ipsum dolor <a href="detail-page.html">link to detail-page.html</a> amidala sith dooku solo moff organa obi-wan windu. Gamorrean binks wedge darth. Mon darth mon kit ponda solo. Moff watto ackbar mothma moff anakin. Lando skywalker lars fett calrissian lars organa. Organa kenobi wedge darth jawa skywalker anakin. Twi'lek kit darth calamari lando kamino droid. Darth jawa fett grievous maul. Palpatine obi-wan leia tusken raider dagobah. Twi'lek qui-gon boba antilles yoda thrawn. Wampa luuke wampa skywalker. Moff ponda ackbar dagobah kit lobot jinn solo.
+      Queen are a British rock band that formed in London in 1970. Their classic line-up was Freddie Mercury (lead vocals and piano), Brian May (lead guitar and vocals), Roger Taylor (drums and vocals), and John Deacon (bass guitar). Their earliest works were influenced by progressive rock, hard rock and heavy metal, but the band gradually ventured into more conventional and radio-friendly works by incorporating further styles, such as arena rock and pop rock, into their music.</p>
+
+      <p>Before forming Queen, May and Taylor had played together in the band Smile. Mercury, then known by his birth name, Farrokh Bulsara, was a fan of Smile and encouraged them to experiment with more elaborate stage and recording techniques. Mercury joined in 1970, suggested the name "Queen", and adopted his familiar stage name. Deacon was recruited before the band recorded their eponymous debut album in 1973. Queen first charted in the UK with their second album, Queen II, in 1974, but it was the release of Sheer Heart Attack later that year and A Night at the Opera in 1975 which brought them international success. The latter featured "Bohemian Rhapsody", which stayed at number one in the UK for nine weeks and also helped to popularise the music video.</p>
+
+      <p>The band's 1977 album News of the World contained "We Will Rock You" and "We Are the Champions", which have become anthems at sporting events. By the early 1980s, Queen were one of the biggest stadium rock bands in the world. "Another One Bites the Dust" (1980) became their best-selling single, while their 1981 compilation album Greatest Hits is the best-selling album in the UK and is certified eight times platinum in the US. Their performance at the 1985 Live Aid concert has been ranked among the greatest in rock history by various music publications. The last concert featuring their classic line up–the final live performance of Mercury–took place at Knebworth, England, in August 1986. In 1991, Mercury died of bronchopneumonia, a complication of AIDS, and Deacon retired in 1997. May and Taylor have performed under the Queen name with Paul Rodgers and Adam Lambert as vocalists on tours since.</p>
+
+      <p>Estimates of their record sales range from 170 million to 300 million records, making them one of the world's best-selling music artists. Queen received the Outstanding Contribution to British Music Award from the British Phonographic Industry in 1990. They were inducted into the Rock and Roll Hall of Fame in 2001. Each member of Queen has composed multiple hit singles, and all four band members were inducted into the Songwriters Hall of Fame in 2003. In 2005, the band received the Ivor Novello Award for Outstanding Song Collection from the British Academy of Songwriters, Composers, and Authors, and in 2018 they were presented the Grammy Lifetime Achievement Award.
     </p>
-      <ul> 
-        {% for book in books %}
-          <li>{{ book.title }}, {{ book.author }}</li>
-        {% else %}
-          <li>This would display if the 'books' collection were empty</li>
-        {% endfor %}
-     </ul>
-    </div>
-  </div>
+        </div>
+        </div>
+        {% include "_partials/member.njk"%}
+        {% include "_partials/album.njk" %}
 </div>
 {% endblock %}
